Поправить по замечаниям1